--- a/scss/components/_navbar.scss
+++ b/scss/components/_navbar.scss
@@ -7,6 +7,7 @@
     min-height: 7.5vh;
     //max-height: 10vh;
     background-color: $primarycolor;
+    font-size:1.3rem;
     z-index: 100;
     .nav-links{
         display:flex;
